Тестовое задание. project_shift: Изменил структуру проекта